--- a/HospitalApp-web/pom.xml
+++ b/HospitalApp-web/pom.xml
@@ -2,10 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-    <artifactId>HospitalApp</artifactId>
-    <groupId>edu.pingeso.primeraapp</groupId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
+        <artifactId>HospitalApp</artifactId>
+        <groupId>edu.pingeso.primeraapp</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
     <groupId>edu.pingeso.primeraapp</groupId>
     <artifactId>HospitalApp-web</artifactId>
@@ -32,10 +32,27 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.1</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>6.0</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>2.41.0</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
