--- a/HospitalApp-ejb/pom.xml
+++ b/HospitalApp-ejb/pom.xml
@@ -2,10 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-    <artifactId>HospitalApp</artifactId>
-    <groupId>edu.pingeso.primeraapp</groupId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
+        <artifactId>HospitalApp</artifactId>
+        <groupId>edu.pingeso.primeraapp</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
     <groupId>edu.pingeso.primeraapp</groupId>
     <artifactId>HospitalApp-ejb</artifactId>
@@ -79,6 +79,18 @@
             <artifactId>hibernate-jpamodelgen-1.3.0.Final</artifactId>
             <version>SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency> 
+            <groupId>org.glassfish.extras</groupId> 
+            <artifactId>glassfish-embedded-all</artifactId> 
+            <version>3.0</version> 
+            <scope>test</scope> 
         </dependency>
         <dependency>
             <groupId>javax</groupId>
